# crypto-analitic-platform

./: README.md
dags/: .envExample  .gitignore  README.md  main.py  parser.py  pyproject.toml  requirements.txt
dags/cian_pipline/: const.py  utils.py
dags/core/: config.py
dags/depends/: depends.py
dags/docker/: docker-compose.yaml
dags/migration/: test.py
dags/repository/: database.py
